c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/for_decl_no_init.c
int main(void) {
    int x = 4;
    for (int i; (i = x - 2); x = i + 1) {
    }
    return x;
}
