c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/missing_for_header_clause.c
int main(void) {
    for (int i = 0;)
        ;
    return 0;
}